# evprofiler

./: Cargo.toml  Makefile  README.md  build.rs
pb/: parca.debuginfo.v1alpha1.rs  parca.metastore.v1alpha1.rs  parca.profilestore.v1alpha1.rs  parca.query.v1alpha1.rs  parca.scrape.v1alpha1.rs  parca.share.v1alpha1.rs  parca.telemetry.v1alpha1.rs  perftools.profiles.rs
src/: agent_store.rs  main.rs  profile_store.rs  profilestore.rs  schema_builder.rs
src/columnquery/: mod.rs  pprof_writer.rs  record_reader.rs
src/dal/: mod.rs
src/debuginfo_store/: debuginfod.rs  fetcher.rs  metadata.rs  mod.rs  reasons.rs
src/ingester/: bla.rs  mod.rs
src/normalizer/: mod.rs  profile.rs  sample.rs  series.rs  utils.rs  write_raw.rs
src/profile/: encode.rs  executableinfo.rs  mod.rs  schema.rs  utils.rs
src/profile_store/: mod.rs  normalizer.rs  profile.rs
src/storage/: mod.rs
src/symbolizer/: cache.rs  liner.rs  mod.rs  normalize.rs
src/symbols/: demangle.rs  mod.rs
src/symbols/addr_to_line/: dwarf.rs  go.rs  mod.rs  symbol.rs
src/symbols/addr_to_line/testdata/: basic-go-with-debuginfo
src/symbols/elfutils/: dwarf.rs  dynsym.rs  gopclntab.rs  mod.rs  symtab.rs
