[package]
name = "evprofiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tokio = { version = "1", features = ["full"] }
prost = "0.13"
prost-types = "0.13.3"
tokio-stream = "0.1.16"
log = "0.4.22"
colog = "1.3.0"
async-stream = "0.3.6"
arrow = "53.2.0"
flate2 = "1.0"
url = "2.5.3"
ureq = "2.10.1"
chrono = "0.4.38"
ulid = "1.1.3"
cpp_demangle = "0.4.4"
rustc-demangle = "0.1.24"
tempfile = "3.14.0"
object = "0.36.5"

[build-dependencies]
tonic-build = "0.12.3"
tonic-buf-build = "0.3.0"

